--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3>Links:</h3>
       <ul>
         <li><a href="http://acm.cs.uic.edu">UIC ACM</a></li>
-        <li><a href="http://acm.cs.uic.edu/uicwireless-linux">UIC Wireless on ubuntu</a></li>
+        <li><a href="http://acm.cs.uic.edu/uicwifi-linux">UIC Wireless on ubuntu</a></li>
       </ul>
     </div>
 
